--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.1.4"
+    "react-router-dom": "^7.1.4",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
